--- a/IPMS_KLK/Views/MainMenuOptions/FFBCounting.xaml
+++ b/IPMS_KLK/Views/MainMenuOptions/FFBCounting.xaml
@@ -6,7 +6,8 @@
     <ContentPage.Background>
         <LinearGradientBrush EndPoint="0,1">
             <GradientStop Color="#ffffff" Offset="0.1" />
-            <GradientStop Color="#C6F8E5" Offset="1.0" />
+            <GradientStop Color="#ffffff" Offset="1.0" />
+            <!--<GradientStop Color="#C6F8E5" Offset="1.0" />-->
         </LinearGradientBrush>
     </ContentPage.Background>
 
