--- a/IPMS_KLK/Views/MainMenuOptions/GeneralWorker.xaml
+++ b/IPMS_KLK/Views/MainMenuOptions/GeneralWorker.xaml
@@ -8,7 +8,8 @@
     <ContentPage.Background>
         <LinearGradientBrush EndPoint="0,1">
             <GradientStop Color="#ffffff" Offset="0.1" />
-            <GradientStop Color="#FBF7D5" Offset="1.0" />
+            <GradientStop Color="#ffffff" Offset="1.0" />
+            <!--<GradientStop Color="#FBF7D5" Offset="1.0" />-->
         </LinearGradientBrush>
     </ContentPage.Background>
     
