--- a/IPMS_KLK/Views/MainMenuOptions/OthersChanges.xaml
+++ b/IPMS_KLK/Views/MainMenuOptions/OthersChanges.xaml
@@ -6,7 +6,8 @@
     <ContentPage.Background>
         <LinearGradientBrush EndPoint="0,1">
             <GradientStop Color="#ffffff" Offset="0.1" />
-            <GradientStop Color="#9e7cd7" Offset="1.0" />
+            <GradientStop Color="#ffffff" Offset="1.0" />
+            <!--<GradientStop Color="#9e7cd7" Offset="1.0" />-->
         </LinearGradientBrush>
     </ContentPage.Background>
 
@@ -37,20 +38,20 @@
         <StackLayout>
             <StackLayout Margin="0,15,0,0">
                 <Grid>
-                    <lottie:AnimationView Animation="Resources.kid-on-laptop.json"
+                    <lottie:AnimationView Animation="Resources.login-anim.json"
                          AnimationSource="EmbeddedResource"
                          RepeatMode="Infinite"
                          AutoPlay="True"
-                         HeightRequest="200"
-                         HorizontalOptions="StartAndExpand"
-                         Margin="0,0,0,0"/>
-                    <StackLayout Margin="30,20,0,0" VerticalOptions="StartAndExpand" HorizontalOptions="EndAndExpand">
+                         HeightRequest="125"
+                         HorizontalOptions="EndAndExpand"
+                         Margin="150,0,0,0"/>
+                    <StackLayout Margin="30,0,10,0" VerticalOptions="StartAndExpand" HorizontalOptions="StartAndExpand">
                         <Label Text="Others"
-                               FontSize="75"  
+                               FontSize="70"  
                                TextColor="BLack"
                                FontFamily="passion"/>
 
-                        <Label Text="/Changes"
+                        <Label Text="Changes"
                                FontSize="40"                
                                TextColor="Black"
                                FontFamily="passion" />
@@ -58,7 +59,7 @@
                 </Grid>
             </StackLayout>
 
-            <Grid Margin="20,0,20,0">
+            <Grid Margin="20,50,20,0">
                 <Grid.RowDefinitions>
                     <RowDefinition Height="70"/>
                 </Grid.RowDefinitions>
@@ -78,12 +79,12 @@
 
 
                 <Label FontSize="Medium" Margin="0,10,0,0" TextColor="Black" Text="Scanning Lent Labor OC?" HorizontalOptions="CenterAndExpand"/>
-                <Grid Margin="20,20,20,0">
+                <Grid Margin="20,0,20,0" ColumnSpacing="20">
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition Width="*"/>
                     </Grid.ColumnDefinitions>
 
-                    <Button Text="Yes" BackgroundColor="DarkGreen" Grid.Column="0" Command="{Binding AddNewJobScanOC_YesCommand}"/>
+                    <Button Text="Yes" BackgroundColor="#9e7cd7" Grid.Column="0" Command="{Binding AddNewJobScanOC_YesCommand}"/>
                     <Button Text="No" BackgroundColor="DarkRed" Grid.Column="1" Command="{Binding AddNewJobScanOC_NoCommand}"/>
                 </Grid>
 
