--- a/IPMS_KLK/Views/MainMenuOptions/ReceiptReprint.xaml
+++ b/IPMS_KLK/Views/MainMenuOptions/ReceiptReprint.xaml
@@ -6,7 +6,8 @@
     <ContentPage.Background>
         <LinearGradientBrush EndPoint="0,1">
             <GradientStop Color="#ffffff" Offset="0.1" />
-            <GradientStop Color="#E2BEF1" Offset="1.0" />
+            <GradientStop Color="#ffffff" Offset="1" />
+            <!--<GradientStop Color="#E2BEF1" Offset="1.0" />-->
         </LinearGradientBrush>
     </ContentPage.Background>
 
