--- a/IPMS_KLK/Views/MainMenuOptions/RubberReceptionMenuOptions/LatexFC.xaml
+++ b/IPMS_KLK/Views/MainMenuOptions/RubberReceptionMenuOptions/LatexFC.xaml
@@ -7,7 +7,7 @@
     <ContentPage.Background>
         <LinearGradientBrush EndPoint="0,1">
             <GradientStop Color="#ffffff" Offset="0.1" />
-            <GradientStop Color="#9cd0f2" Offset="1.0" />
+            <GradientStop Color="#ffffff" Offset="1.0" />
         </LinearGradientBrush>
     </ContentPage.Background>
     
@@ -34,7 +34,7 @@
                 <Setter Property="VerticalOptions" Value="FillAndExpand"/>
                 <Setter Property="HorizontalOptions" Value="FillAndExpand"/>
                 <Setter Property="Margin" Value="0,0,0,2"/>
-                <Setter Property="TextColor" Value="Black"/>
+                <Setter Property="TextColor" Value="White"/>
                 <Setter Property="BackgroundColor" Value="#1167b1"/>
                 <Setter Property="FontSize" Value="16"/>
             </Style>
@@ -45,6 +45,7 @@
                 <Setter Property="FontAttributes" Value="Bold"/>
                 <Setter Property="VerticalTextAlignment" Value="Center"/>
                 <Setter Property="VerticalOptions" Value="CenterAndExpand"/>
+                <Setter Property="FontFamily" Value="sfBlack"/>
             </Style>
 
             <Style TargetType="Entry">
@@ -80,9 +81,9 @@
                          AnimationSource="EmbeddedResource"
                          RepeatMode="Infinite"
                          AutoPlay="True"
-                         HeightRequest="200"
+                         HeightRequest="150"
                          VerticalOptions="EndAndExpand" 
-                         Margin="0,0,20,0" Grid.Row="0" Grid.Column="0"/>
+                         Margin="10,0,20,0" Grid.Row="0" Grid.Column="0"/>
                 
                               
                 <Label Text="Latex and FC" 
@@ -94,7 +95,7 @@
                 
             </Grid>
 
-            <Grid Margin="20,20,20,20" RowSpacing="15">
+            <Grid Margin="20,0,20,20" RowSpacing="15">
                 <Grid.RowDefinitions>
                     <RowDefinition Height="60"/>
                     <RowDefinition Height="60"/>
@@ -109,15 +110,55 @@
                     <ColumnDefinition Width="*"/>
                 </Grid.ColumnDefinitions>
 
-                <Label Text="1. Worker ID" Grid.Row="0" Grid.Column="0"/>
-                <Label Text="2. Field No" Grid.Row="1" Grid.Column="0"/>
-                <Label Text="3. Task No" Grid.Row="2" Grid.Column="0"/>
-                <Label Text="4. Tapping Type" Grid.Row="3" Grid.Column="0"/>
-                <Label Text="5. Method **" Grid.Row="4" Grid.Column="0"/>
+                <Label Text="1. Worker ID" Grid.Row="0" Grid.Column="0">
+                    <Label.Triggers>
+                        <DataTrigger TargetType="Label"
+                                             Binding="{Binding Source={x:Reference workerID_entry},Path=IsFocused}" Value="true">
+                            <Setter Property="FontSize" Value="Medium"/>
+                            <Setter Property="TextColor" Value="DarkBlue"/>
+                        </DataTrigger>
+                    </Label.Triggers>
+                </Label>
+                <Label Text="2. Field No" Grid.Row="1" Grid.Column="0">
+                    <Label.Triggers>
+                        <DataTrigger TargetType="Label"
+                                             Binding="{Binding Source={x:Reference fieldNo_entry},Path=IsFocused}" Value="true">
+                            <Setter Property="FontSize" Value="Medium"/>
+                            <Setter Property="TextColor" Value="DarkBlue"/>
+                        </DataTrigger>
+                    </Label.Triggers>
+                </Label>
+                <Label Text="3. Task No" Grid.Row="2" Grid.Column="0">
+                    <Label.Triggers>
+                        <DataTrigger TargetType="Label"
+                                             Binding="{Binding Source={x:Reference taskNo_entry},Path=IsFocused}" Value="true">
+                            <Setter Property="FontSize" Value="Medium"/>
+                            <Setter Property="TextColor" Value="DarkBlue"/>
+                        </DataTrigger>
+                    </Label.Triggers>
+                </Label>
+                <Label Text="4. Tapping Type" Grid.Row="3" Grid.Column="0">
+                    <Label.Triggers>
+                        <DataTrigger TargetType="Label"
+                                             Binding="{Binding Source={x:Reference pickerTappingType},Path=IsFocused}" Value="true">
+                        <Setter Property="FontSize" Value="Medium"/>
+                        <Setter Property="TextColor" Value="DarkBlue"/>
+                    </DataTrigger>
+                    </Label.Triggers>
+                </Label>
+                <Label Text="5. Method **" Grid.Row="4" Grid.Column="0">
+                    <Label.Triggers>
+                        <DataTrigger TargetType="Label"
+                                             Binding="{Binding Source={x:Reference methodPicker},Path=IsFocused}" Value="true">
+                            <Setter Property="FontSize" Value="Medium"/>
+                            <Setter Property="TextColor" Value="DarkBlue"/>
+                        </DataTrigger>
+                    </Label.Triggers>
+                </Label>
 
-                <Frame Grid.Row="0" Grid.Column="1"><Entry Text="{Binding WorkerID}"/></Frame>
-                <Frame Grid.Row="1" Grid.Column="1"><Entry Text="{Binding FieldNo}"/></Frame>
-                <Frame Grid.Row="2" Grid.Column="1"><Entry Text="{Binding TaskNo}"/></Frame>
+                <Frame Grid.Row="0" Grid.Column="1"><Entry Text="{Binding WorkerID}" x:Name="workerID_entry"/></Frame>
+                <Frame Grid.Row="1" Grid.Column="1"><Entry Text="{Binding FieldNo}" x:Name="fieldNo_entry"/></Frame>
+                <Frame Grid.Row="2" Grid.Column="1"><Entry Text="{Binding TaskNo}" x:Name="taskNo_entry"/></Frame>
                 <Frame Grid.Row="3" Grid.Column="1" Grid.ColumnSpan="2">
                     <Picker Title="--Select tapping type--" 
                         SelectedIndex="{Binding TappingTypeSelectedIndex}"                        
@@ -141,7 +182,7 @@
 
             <StackLayout VerticalOptions="EndAndExpand" Margin="20,0,20,0">
                 <Label Text="** Only applied to Recovery Tapping"/>
-                <Frame Style="{StaticResource button_shadow_frame}">
+                <Frame Style="{StaticResource button_shadow_frame}" Margin="0,10,0,0">
                     <Button Text="NEXT" Command="{Binding NextButtonCommand}"/>
                 </Frame>
                 <Image Source="klk_logo.png" HeightRequest="50" WidthRequest="50" Margin="0,0,0,10"/>
