--- a/IPMS_KLK/Views/MainMenuOptions/OthersChanges.xaml
+++ b/IPMS_KLK/Views/MainMenuOptions/OthersChanges.xaml
@@ -13,11 +13,25 @@
 
     <ContentPage.Resources>
         <ResourceDictionary>
+            <Style TargetType="Frame" x:Key="button_shadow_frame">
+                <Setter Property="BackgroundColor" Value="DarkGray"/>
+                <Setter Property="Padding" Value="0"/>
+                <Setter Property="CornerRadius" Value="20"/>
+            </Style>
+            
+            <Style TargetType="Frame">
+                <Setter Property="BackgroundColor" Value="White"/>
+                <Setter Property="BorderColor" Value="DarkGray"/>
+                <Setter Property="CornerRadius" Value="20"/>
+                <Setter Property="HasShadow" Value="True"/>
+                <Setter Property="Padding" Value="0"/>
+            </Style>
+            
             <Style TargetType="Button">
                 <Setter Property="FontSize" Value="18"/>
                 <Setter Property="FontAttributes" Value="Bold"/>
                 <Setter Property="Padding" Value="0,15,0,15"/>
-                <Setter Property="Margin" Value="0,10,0,0"/>
+                <Setter Property="Margin" Value="0,0,2,3"/>
                 <Setter Property="CornerRadius" Value="20"/>
                 <Setter Property="BackgroundColor" Value="Black"/>
                 <Setter Property="TextColor" Value="White"/>
@@ -43,49 +57,60 @@
                          RepeatMode="Infinite"
                          AutoPlay="True"
                          HeightRequest="125"
-                         HorizontalOptions="EndAndExpand"
-                         Margin="150,0,0,0"/>
-                    <StackLayout Margin="30,0,10,0" VerticalOptions="StartAndExpand" HorizontalOptions="StartAndExpand">
+                         Margin="125,0,0,0"/>
+                    <StackLayout Margin="30,20,10,0" VerticalOptions="StartAndExpand" HorizontalOptions="StartAndExpand">
                         <Label Text="Others"
-                               FontSize="70"  
+                               FontSize="55"  
                                TextColor="BLack"
                                FontFamily="passion"/>
 
                         <Label Text="Changes"
-                               FontSize="40"                
+                               FontSize="30"                
                                TextColor="Black"
                                FontFamily="passion" />
                     </StackLayout>
                 </Grid>
             </StackLayout>
 
-            <Grid Margin="20,50,20,0">
+            <Grid Margin="30,50,30,0" VerticalOptions="CenterAndExpand">
                 <Grid.RowDefinitions>
+                    <RowDefinition Height="50"/>
                     <RowDefinition Height="70"/>
                 </Grid.RowDefinitions>
                 <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="150" />
                     <ColumnDefinition Width="*" />
+                    <ColumnDefinition Width="100" />
                 </Grid.ColumnDefinitions>
 
-                <Label FontSize="Medium" FontAttributes="Bold" TextColor="Black" Text="OC Code" Grid.Column="0" VerticalOptions="Center"/>
-                <Entry IsEnabled="False" Grid.Column="1" VerticalOptions="Center"/>
-                <ImageButton Source="scan.png" BackgroundColor="Transparent"  Grid.Column="2" VerticalOptions="Center"/>
+                <Label FontSize="Small" FontAttributes="Bold" TextColor="Black" Text="OC Code" Grid.Column="0" Grid.Row="0" VerticalOptions="Center"/>
+                <Frame Grid.Row="0" Grid.Column="1" >
+                    <Entry IsEnabled="False" VerticalOptions="Center" />
+                </Frame>
+                <ImageButton Source="scan.png" BackgroundColor="Transparent"  Grid.Column="2"  Grid.Row="0" VerticalOptions="Center"/>
+
+                <Label FontSize="Small" TextColor="Black" Text="Issue Receipt?"  Grid.Row="1" Grid.Column="0"/>
+                <Switch Scale="1.5" IsToggled="True" HorizontalOptions="CenterAndExpand"  Grid.Row="1" Grid.Column="1"/>
             </Grid>
 
             <StackLayout  VerticalOptions="EndAndExpand">
-                <Label FontSize="Medium" TextColor="Black" Text="Issue Receipt?" HorizontalOptions="CenterAndExpand"/>
-                <Switch Scale="1.5" IsToggled="True" HorizontalOptions="CenterAndExpand" />
+                
 
 
 
-                <Label FontSize="Medium" Margin="0,10,0,0" TextColor="Black" Text="Scanning Lent Labor OC?" HorizontalOptions="CenterAndExpand"/>
+                <Label FontSize="Small" Margin="0,10,0,0" TextColor="Black" Text="Scanning Lent Labor OC?" HorizontalOptions="CenterAndExpand"/>
                 <Grid Margin="20,0,20,0" ColumnSpacing="20">
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition Width="*"/>
                     </Grid.ColumnDefinitions>
 
-                    <Button Text="Yes" BackgroundColor="#9e7cd7" Grid.Column="0" Command="{Binding AddNewJobScanOC_YesCommand}"/>
-                    <Button Text="No" BackgroundColor="DarkRed" Grid.Column="1" Command="{Binding AddNewJobScanOC_NoCommand}"/>
+                    <Frame Style="{StaticResource button_shadow_frame}" Grid.Column="0">
+                        <Button Text="Yes" BackgroundColor="#9e7cd7"  Command="{Binding AddNewJobScanOC_YesCommand}"/>
+                    </Frame>
+
+                    <Frame Style="{StaticResource button_shadow_frame}" Grid.Column="1" >
+                        <Button Text="No" BackgroundColor="DarkRed" Command="{Binding AddNewJobScanOC_NoCommand}"/>
+                    </Frame>
                 </Grid>
 
                 <Image Source="klk_logo.png" HeightRequest="50" WidthRequest="50" Margin="0,0,0,10"/>
