--- a/IPMS_KLK/Views/MainMenuOptions/RubberReceptionMenuOptions/LatexFC.xaml
+++ b/IPMS_KLK/Views/MainMenuOptions/RubberReceptionMenuOptions/LatexFC.xaml
@@ -86,7 +86,7 @@
                          Margin="10,0,20,0" Grid.Row="0" Grid.Column="0"/>
                 
                               
-                <Label Text="Latex and FC" 
+                <Label Text="Latex and FC" x:Name="titleLabel"
                        FontFamily="passion" 
                        HorizontalOptions="EndAndExpand" 
                        FontSize="40" 
