--- a/IPMS_KLK/Views/MainMenuOptions/GeneralWorkerMenuOptions/GuidedByJob.xaml
+++ b/IPMS_KLK/Views/MainMenuOptions/GeneralWorkerMenuOptions/GuidedByJob.xaml
@@ -2,24 +2,91 @@
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="IPMS_KLK.Views.MainMenuOptions.GeneralWorkerMenuOptions.GuidedByJob"
-             BackgroundImageSource="bg.jpg">
-    <ContentPage.Content>
-        <StackLayout>
-            <Grid>
-                <Image Source="workers.jpg" Aspect="AspectFill" HeightRequest="150"/>
-                <StackLayout  BackgroundColor="Black" Opacity="0.5"/>
-                <Label Text="GUIDED BY JOB"
-                   FontSize="Title"
-                   FontAttributes="Bold"
-                   HorizontalTextAlignment="Center"
-                   VerticalTextAlignment="Center"
-                   Padding="0,20,0,0"
-                   TextColor="White"/>
-            </Grid>
+             xmlns:lottie="clr-namespace:Lottie.Forms;assembly=Lottie.Forms">
 
-            <StackLayout  VerticalOptions="EndAndExpand">
-                <Image Source="klk_logo.png" HeightRequest="50" WidthRequest="50" Margin="0,0,0,10"/>
+
+    <ContentPage.Background>
+        <LinearGradientBrush EndPoint="0,1">
+            <GradientStop Color="#ffffff" Offset="0.1" />
+            <GradientStop Color="#ffffff" Offset="1.0" />
+            <!--<GradientStop Color="#FBF7D5" Offset="1.0" />-->
+        </LinearGradientBrush>
+    </ContentPage.Background>
+
+    <ContentPage.Resources>
+        <ResourceDictionary>
+            <Style TargetType="Button">
+                <Setter Property="CornerRadius" Value="30" />
+                <Setter Property="TextColor" Value="White"/>
+                <Setter Property="TextTransform" Value="None"/>
+                <Setter Property="FontFamily" Value="sfBlack"/>
+                <Setter Property="Padding" Value="10,10,10,10"/>
+                <Setter Property="VerticalOptions" Value="FillAndExpand"/>
+                <Setter Property="HorizontalOptions" Value="FillAndExpand"/>
+                <Setter Property="Margin" Value="0,0,0,2"/>
+                <Setter Property="TextColor" Value="Black"/>
+                <Setter Property="BackgroundColor" Value="#faefbe"/>
+                <Setter Property="FontSize" Value="16"/>
+            </Style>
+
+            <Style TargetType="Frame">
+                <Setter Property="BackgroundColor" Value="DarkGray"/>
+                <Setter Property="Padding" Value="0"/>
+                <Setter Property="CornerRadius" Value="30"/>
+            </Style>
+        </ResourceDictionary>
+    </ContentPage.Resources>
+
+    <ContentPage.Content>
+        <StackLayout Margin="0,0,0,0">
+            <StackLayout Margin="30,5,0,0">
+                <Grid>
+                    <lottie:AnimationView Animation="Resources.greenboy.json" 
+                         AnimationSource="EmbeddedResource"
+                         RepeatMode="Infinite"
+                         AutoPlay="True"
+                         HeightRequest="200"
+                         VerticalOptions="CenterAndExpand" HorizontalOptions="StartAndExpand"
+                         Margin="0,0,200,0"/>
+                    <StackLayout Margin="0,0,20,0" VerticalOptions="CenterAndExpand" HorizontalOptions="EndAndExpand">
+                        <Label Text="Guided By"
+                               FontSize="50"  
+                               TextColor="Black"
+                               FontFamily="passion"/>
+                        <Label Text="JOB" HorizontalOptions="EndAndExpand"
+                               FontSize="70"  
+                               TextColor="Black"
+                               FontFamily="passion"/>
+                    </StackLayout>
+                </Grid>
             </StackLayout>
+
+
+            <StackLayout VerticalOptions="FillAndExpand" Margin="20,5,20,0">
+                <Grid  ColumnSpacing="20" RowSpacing="20" VerticalOptions="FillAndExpand">
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="40*"/>
+                        <RowDefinition Height="40*"/>
+                        <RowDefinition Height="40*"/>
+                        <RowDefinition Height="40*"/>
+                        <RowDefinition Height="40*"/>
+                        <RowDefinition Height="40*"/>
+                        <RowDefinition Height="70*"/>
+                        <RowDefinition Height="70*"/>
+                    </Grid.RowDefinitions>
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="*"/>
+                        <ColumnDefinition Width="*"/>
+                    </Grid.ColumnDefinitions>
+
+                    
+                    
+                </Grid>
+            </StackLayout>
+
+            
+
+            <Image Source="klk_logo.png" HeightRequest="50" WidthRequest="50" VerticalOptions="EndAndExpand" Margin="0,0,0,10"/>
 
         </StackLayout>
     </ContentPage.Content>
