--- a/IPMS_KLK/Views/MainMenuOptions/RubberReceptionMenuOptions/LatexFC.xaml
+++ b/IPMS_KLK/Views/MainMenuOptions/RubberReceptionMenuOptions/LatexFC.xaml
@@ -182,8 +182,8 @@
 
             <StackLayout VerticalOptions="EndAndExpand" Margin="20,0,20,0">
                 <Label Text="** Only applied to Recovery Tapping"/>
-                <Frame Style="{StaticResource button_shadow_frame}" Margin="0,10,0,0">
-                    <Button Text="NEXT" Command="{Binding NextButtonCommand}"/>
+                <Frame Style="{StaticResource button_shadow_frame}" Margin="0,10,0,0" x:Name="latexFC_next_btn">
+                    <Button Text="NEXT" Command="{Binding NextButtonCommand}" />
                 </Frame>
                 <Image Source="klk_logo.png" HeightRequest="50" WidthRequest="50" Margin="0,0,0,10"/>
             </StackLayout>
